test/integration/good/lang/good_early_reject.stan
functions {
    real test(real k) {
        if (k < 0)
            ;
        reject("test");

        return k;
    }
}
