test/integration/bad/functions-bad29.stan
functions {
  real foo(real bar_lupdf) {
    return bar_lupdf;
  }
}
